Fixing some bugs (#5)
* Squashed some bugs

* Changed input-list li width from 50 to 90

* Changed input-list li width from 50 to 90

* Update hangman.php

--- a/css/hangman_style.css
+++ b/css/hangman_style.css
@@ -42,7 +42,7 @@ span {
 
 .input-list li {
   display: inline-block;
-  width: 50px;
+  width: 90px;
   height: 50px;
   text-align: center;
   border: solid 1px #888;
